[package]
name = "interop-neon"
version = "0.1.0"
authors = ["Andrea del Rio <adelrio@gmail.com>"]
license = "UNLICENSED"
build = "build.rs"

[lib]
name = "interop_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
num_cpus = "1.4.0"
fst = "0.2"
